# tapp

./: .releaserc  CHANGELOG.md  package-lock.json  package.json
.github/workflows/: build.yml  dev-auto-pr.yml
scripts/: prepareCMD.sh  versioning.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
