[package]
name = "tapp"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies]
tauri-plugin-shell = "2"
serde_json = "1"
tauri-plugin-dialog = "2"
[dependencies.tauri]
version = "2"
features = []

[dependencies.serde]
version = "1"
features = ["derive"]
